bk_ida/gccida/g1/assign_parms
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4766:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *values; // rdi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4770:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4780:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4785:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v22; // r15 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4786:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v23; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4787:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v24; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4791:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v28; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4814:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4816:5: error: expected ';' after expression
tree v53; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4816:6: error: use of undeclared identifier 'v53'
tree v53; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4829:5: error: expected ';' after expression
tree v66; // rdx 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4829:6: error: use of undeclared identifier 'v66'
tree v66; // rdx 
     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4837:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v74; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4843:6: error: use of undeclared identifier 'x_regno_reg_rtx'; did you mean 'gen_reg_rtx'?
rtx *x_regno_reg_rtx; // rdx 
     ^~~~~~~~~~~~~~~
     gen_reg_rtx
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/rtl.h:1258:12: note: 'gen_reg_rtx' declared here
extern rtx gen_reg_rtx                  PARAMS ((enum machine_mode));
           ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4843:5: error: invalid operands to binary expression ('struct rtx_def *' and 'rtx (enum machine_mode)' (aka 'struct rtx_def *(enum machine_mode)'))
rtx *x_regno_reg_rtx; // rdx 
~~~ ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4844:4: error: expected ';' after expression
rtx v81; // rsi 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4844:5: error: use of undeclared identifier 'v81'
rtx v81; // rsi 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4849:5: error: expected ';' after expression
tree result; // rbp 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/function.c:4849:6: error: use of undeclared identifier 'result'
tree result; // rbp 
     ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/assign_parms/src/obj/function.o] Error 1
